
name:            breakout
version:         0.0.0
cabal-version:   >= 1.8
build-type:      Simple

library
  exposed-modules: Ball
                 , Brick
                 , Paddle
                 , Plane
                 , Timer
                 , Collision
  hs-source-dirs: src
  build-depends: base >= 4 && < 5
               , SDL == 0.6.5
               , data-default == 0.5.3
               , SDL == 0.6.5
               , SDL-image == 0.6.1
               , OpenGL == 2.9.1.0
               , mtl == 2.1.2
               , transformers == 0.3.0.0
               , data-default == 0.5.3
               , vect == 0.4.7

executable breakout
    main-is: src/Main.hs
    build-depends: base >= 4 && < 5
                 , SDL == 0.6.5
                 , SDL-image == 0.6.1
                 , OpenGL == 2.9.1.0
                 , mtl == 2.1.2
                 , transformers == 0.3.0.0
                 , data-default == 0.5.3
                 , vect == 0.4.7
                 , breakout
    ghc-options: -Wall -Werror -rtsopts -auto-all -caf-all -fforce-recomp

